--- a/tarieven.html
+++ b/tarieven.html
@@ -9,7 +9,7 @@
 <header>
   <div class="header">
   <h1>Muziekschool H&J</h1><br>
-  Luisterend oor voor talent!
+  Tarieven
   </div>
   <div class="topnav">
     <a href="index.html">Home</a>
